# AOC2024

./: .gitignore  CMakeLists.txt
include/: day1.hpp  day2.hpp  day3.hpp  day4.hpp  tests.hpp
include/util/: common.hpp  simple_csv.hpp
src/: CMakeLists.txt
src/day1/: CMakeLists.txt  day1.cpp  main.cpp
src/day2/: CMakeLists.txt  day2.cpp  main.cpp
src/day3/: CMakeLists.txt  day3.cpp  main.cpp
src/day4/: CMakeLists.txt  day4.cpp  main.cpp
src/input/: day_4.txt
tests/: CMakeLists.txt  day_1_input.cpp
